--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "http-auth": "^3.2.3"
+    "http-auth": "^3.2.3",
+    "mongodb": "^3.2.7"
   }
 }
