--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Backend for the website API",
   "main": "index.js",
+  "engines": {
+    "node": "10.x.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
